--- a/Game/Game.html
+++ b/Game/Game.html
@@ -38,7 +38,7 @@
         <div id="buttons">
             <img id="upArr" class="up key" src="Up.jpeg">
             <img id="downArr" class="down key" src="down.jpeg">
-            <img id="leftArr" class="left key" src="left.jpeg">
+            <img id="leftArr" class="left key" src="Left.jpeg">
             <img id="rightArr" class="right key" src="right.jpeg">
         </div>
     </div>
