--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!--<img src="Portfolio_background.jpg" id="background">-->
 
         <h1>
-            <p id="time">Date and time</p>WELCOMEeee
+            <p id="time">Date and time</p>WELCOME
         </h1>
 
         <video width="100%" height="100%" autoplay loop muted id="video">
