--- a/Game/Game.html
+++ b/Game/Game.html
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <p id="tiltScreen">Tilt your screen</p>
+    <p id="tiltScreen">Tilt the screen of your phone</p>
 
     <script src="appJS.js"></script>
     <script>
