--- a/Game/instructions.html
+++ b/Game/instructions.html
@@ -22,7 +22,7 @@
             <li>Turning the sound up is suggested, when playing on a PC.</li>
             <li>If you are using a mobile device, the game might lag a bit, because of the load of the animation.</li>
         </ul>
-        <button id="back" onClick="back()">Back To Game</button>
+        <button id="back" onClick="back()">Back To The Game</button>
     </div>
 
     <script>
