--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -16,18 +16,18 @@
         <ul id="navBarForPhone">
             <li><a href="../index.html" style="background-color : #e0b9ba;">Home</a></li>
             <li><a href="#about" style="background-color : #e2a7a9;">About Me</a></li>
-            <li><a style="background-color : #e39a9c;">Projects</a></li>
-            <li><a style="background-color : #e78a8e;">Skills</a></li>
-            <li><a style="background-color : #e27478;">Resume</a></li>
+            <li><a href="#projects" style="background-color : #e39a9c;">Projects</a></li>
+            <li><a href="#skills" style="background-color : #e78a8e;">Skills</a></li>
+            <li><a href="#resume" style="background-color : #e27478;">Resumé</a></li>
         </ul>
     </div>
 
     <ul id="navBarForPC">
         <li><a href="../index.html">Home</a></li>
         <li><a href="#about">About Me</a></li>
-        <li><a>Projects</a></li>
-        <li><a>Skills</a></li>
-        <li><a>Resumé</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#resume">Resumé</a></li>
     </ul>
 
     <div id="container">
@@ -39,24 +39,28 @@
         <div id="about">
             <h3>About Me</h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia non a cumque iusto. Voluptatum,
-                aperiam
-                doloribus! Velit, illum debitis. Fugiat quaerat excepturi alias deleniti quam vel obcaecati consectetur
-                debitis assumenda?
+                I consider myself to be a <i><b>learner for life</b></i>. I am constantly looking for opportunities to
+                gain more knowledge regarding anything that comes my way. In a field that requires maximum use of the
+                left brain for logical thinking, I try to do things the creative way. An opportunity that will help me
+                enhance my skills and add new ones to my list is what I'm looking for.
+            </p>
+            <img src="aboutMeImg.jpg" id="aboutMeImage">
+        </div>
+        <hr />
+        <div id="projects">
+            <h3>Projects</h3>
+            <p>
+                1)  Android Studio : Tic Tac Toe<br /><br />
+                <b style="color : #464646">•</b> Programming language : <i>Java</i><br />
+                <b style="color : #464646">•</b> Features : <i>3x3 and 4x4 grids, Dark mode, Last high score,
+                    Customizable
+                    player names, Fun facts and tips on loading screen</i>
+
+                <button id="viewProject">View</button>
             </p>
         </div>
         <hr />
         <div id="skills">
-            <h3>Projects</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia non a cumque iusto. Voluptatum,
-                aperiam
-                doloribus! Velit, illum debitis. Fugiat quaerat excepturi alias deleniti quam vel obcaecati consectetur
-                debitis assumenda?
-            </p>
-        </div>
-        <hr />
-        <div id="projects">
             <h3>Skills</h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia non a cumque iusto. Voluptatum,
@@ -66,7 +70,7 @@
             </p>
         </div>
         <hr />
-        <div id="projects1">
+        <div id="resume">
             <h3>Resumé</h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia non a cumque iusto. Voluptatum,
