--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -50,30 +50,30 @@
         <div id="projects">
             <h3>Projects</h3>
             <p>
-                1)  Android Studio : Tic Tac Toe<br /><br />
+                <big>1)  Android Studio : Tic Tac Toe</big><br /><br />
                 <b style="color : #464646">•</b> Programming language : <i>Java</i><br />
                 <b style="color : #464646">•</b> Features : <i>3x3 and 4x4 grids, Dark mode, Last high score,
                     Customizable
                     player names, Fun facts and tips on loading screen</i>
                 <button id="viewTicTacToe" onClick="toGitHub(1)" title="View TicTacToe Project">View</button><br />
             </p>
-            <hr style="width: 35vw;" /><br />
+            <hr style="width: 35vw;" />
             <p>
-                2)  Android Studio : Unit Converter<br /><br />
+                <big>2)  Android Studio : Unit Converter</big><br /><br />
                 <b style="color : #464646">•</b> Programming language : <i>Java</i><br />
                 <b style="color : #464646">•</b> Features : More than 5 units included, Easy to use<i></i>
             </p>
-            <hr style="width: 35vw;" /><br />
+            <hr style="width: 35vw;" />
             <p>
-                3)  Website : Leisure ActiviTEAs<br /><br />
+                <big>3)  Website : Leisure ActiviTEAs</big><br /><br />
                 <b style="color : #464646">•</b> Programming language : <i>JavaScript, HTML, CSS, PHP,
                     PostgreSQL</i><br />
                 <b style="color : #464646">•</b> Framework used : <i>Bootstrap</i><br />
                 <b style="color : #464646">•</b> Features : <i>Login/Sign up options, Image buttons, Easy to
                     navigate, Availability of a lot of options under a specific domain</i><br />
-                <b style="color : #464646">•</b> About : <i>We have tried to include the things that are searched the
+                <!-- <b style="color : #464646">•</b> About : <i>We have tried to include the things that are searched the
                     most related to the 5 most common hobby fields namely Art, Music, Sports, Food, Photography under a
-                    single domain.</i>
+                    single domain.</i> -->
                 <button id="viewLeisure" onClick="toGitHub(2)"
                     title="View Leisure ActiviTEAs Project">View</button><br />
             </p>
