--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -55,15 +55,15 @@
                 <b style="color : #464646">•</b> Features : <i>3x3 and 4x4 grids, Dark mode, Last high score,
                     Customizable
                     player names, Fun facts and tips on loading screen</i>
-                <button id="viewTicTacToe" onClick="toGitHub(1)" title="View TicTacToe Project">View</button><br />
+                <button id="viewTicTacToe" onClick="toGitHub(1)" title="View TicTacToe Project">View</button>
             </p>
-            <hr style="width: 35vw;" />
+            <!-- <hr style="width: 35vw;" /> -->
             <p>
                 <big>2)  Android Studio : Unit Converter</big><br /><br />
                 <b style="color : #464646">•</b> Programming language : <i>Java</i><br />
-                <b style="color : #464646">•</b> Features : More than 5 units included, Easy to use<i></i>
+                <b style="color : #464646">•</b> Features : <i>More than 5 units included, Easy to use</i>
             </p>
-            <hr style="width: 35vw;" />
+            <!-- <hr style="width: 35vw;" /> -->
             <p>
                 <big>3)  Website : Leisure ActiviTEAs</big><br /><br />
                 <b style="color : #464646">•</b> Programming language : <i>JavaScript, HTML, CSS, PHP,
@@ -74,8 +74,7 @@
                 <!-- <b style="color : #464646">•</b> About : <i>We have tried to include the things that are searched the
                     most related to the 5 most common hobby fields namely Art, Music, Sports, Food, Photography under a
                     single domain.</i> -->
-                <button id="viewLeisure" onClick="toGitHub(2)"
-                    title="View Leisure ActiviTEAs Project">View</button><br />
+                <button id="viewLeisure" onClick="toGitHub(2)" title="View Leisure ActiviTEAs Project">View</button>
             </p>
         </div>
         <hr />
