--- a/Recruiter/Certificates/certificate2.html
+++ b/Recruiter/Certificates/certificate2.html
@@ -16,7 +16,7 @@
 
     <script>
         function back() {
-            window.location = "../Recruiter/index.html"
+            window.location = "../index.html"
         }
     </script>
     <script src="certificateJS.js"></script>
