--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -49,23 +49,23 @@
         <hr />
         <div id="projects">
             <h3>Projects</h3>
-            <p>
+            <p id="p1">
                 <big>1)  Android Studio : Tic Tac Toe</big><br /><br />
                 <b style="color : #464646">•</b> Programming language : <i>Java</i><br />
-                <b style="color : #464646">•</b> Features : <i>3x3 and 4x4 grids, Dark mode, Last high score,
+                <b style="color : #464646">•</b> Features : <i>3x3 and 4x4 grids, Dark mode, High score till date,
                     Customizable
                     player names, Fun facts and tips on loading screen</i>
                 <button id="viewTicTacToe" onClick="toGitHub(1)" title="View TicTacToe Project">View</button>
             </p>
             <!-- <hr style="width: 35vw;" /> -->
-            <p>
+            <p id="p2">
                 <big>2)  Android Studio : Unit Converter</big><br /><br />
                 <b style="color : #464646">•</b> Programming language : <i>Java</i><br />
                 <b style="color : #464646">•</b> Features : <i>More than 5 units included, Easy to use</i>
                 <button id="viewConverter" onClick="toGitHub(2)" title="View Unit Converter Project">View</button>
             </p>
             <!-- <hr style="width: 35vw;" /> -->
-            <p>
+            <p id="p3">
                 <big>3)  Website : Leisure ActiviTEAs</big><br /><br />
                 <b style="color : #464646">•</b> Programming language : <i>JavaScript, HTML, CSS, PHP,
                     PostgreSQL</i><br />
@@ -78,7 +78,7 @@
                 <button id="viewLeisure" onClick="toGitHub(3)" title="View Leisure ActiviTEAs Project">View</button>
             </p>
 
-            <p>
+            <p id="p4">
                 <big>4)  Website : Portfolio Website</big><br /><br />
                 <b style="color : #464646">•</b> Programming language : <i>JavaScript, HTML, CSS</i><br />
                 <b style="color : #464646">•</b> Features : <i>Responsive design, Use of CSS animations and transitions,
@@ -90,7 +90,7 @@
                 <!-- <button id="viewPortfolioCode" onClick="toGitHub(4)" title="View Project On Github">View Code</button> -->
             </p>
 
-            <p>
+            <p id="p5">
                 <big>5)  2D Game : Using HTML Canvas</big><br /><br />
                 <b style="color : #464646">•</b> Programming language : <i>JavaScript, HTML, CSS</i><br />
                 <b style="color : #464646">•</b> Features : <i>Responsive design, Virtual keys, Guide, Game restart and
@@ -100,6 +100,8 @@
                     single domain.</i> -->
                 <button id="view2DGame" onClick="toGitHub(5)" title="View 2D Game">View</button>
             </p>
+
+            <div style="text-align: center;"><button id="showProjects">Show more</button></div>
         </div>
         <hr />
         <div id="skills">
