--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -118,7 +118,7 @@
         <div id="resume">
             <h3>Resumé</h3>
             <img id="resumeImg" src="Resume_preview.png">
-            <div id="resumeHover" class="resumeHoverClass">
+            <div id="resumeHover">
                 <h5 style=" margin: 0 auto; background-color: #e2a7a9; color: black; padding: 1vw 0;">View Resumé</h5>
                 <img src="Resume_preview.png">
             </div>
@@ -127,14 +127,16 @@
         <div id="projects2">
             <h3>In case you're bored reviewing portfolios all day</h3>
             <p>
-                <img id="toGameImage" src="toGameBack.png" onclick="goToGame()"><br />
+                <img id="toGameImage" src="toGameBack.png" onclick="goToGame()" title="Go to game"><br />
                 <button id="toGame" onclick="goToGame()">Play a 2D game!</button>
             </p>
         </div>
     </div>
 
     <footer>
-        This is the footer.
+        <!-- This is the footer. -->
+        <img src="gmail.png">
+        <img src="linkedIn.png">
     </footer>
     <script src="recJS.js"></script>
 
