--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -41,8 +41,9 @@
             <p>
                 I consider myself to be a <i><b>learner for life</b></i>. I am constantly looking for opportunities to
                 gain more knowledge regarding anything that comes my way. In a field that requires maximum use of the
-                left brain for logical thinking, I try to do things the creative way. An opportunity that will help me
-                enhance my skills and add new ones to my list is what I'm looking for.
+                left brain for logical thinking, I try to do things the creative way. Organizing and keeping things,
+                ranging from real-life objects to HTML elements to the code part, in order, is my forte. An opportunity
+                that will help me enhance my skills and add new ones to my list is what I'm looking for.
             </p>
             <img src="aboutMeImg.jpg" id="aboutMeImage">
         </div>
@@ -135,8 +136,22 @@
 
     <footer>
         <!-- This is the footer. -->
-        <img src="gmail.png">
-        <img src="linkedIn.png">
+        <h3 id="footerTitle">You can reach out to me via</h3>
+        <div id="footerContainer">
+            <div id="gmail" style="max-width: fit-content;"><img id="gmailImg"
+                    style="max-width: 3vw; border-radius: 0.5vw;" src="gmail.png" title="Send me an e-mail"></div>
+            <div id="linkedIn" style="max-width: fit-content;"><img id="linkedInImg"
+                    style="max-width: 3vw; border-radius: 0.5vw;" src="linkedIn.png" title="View my LinkedIn profile">
+            </div>
+        </div>
+        <div id="footerLinks">
+            <h3 id="moreLinksTitle" style="padding: 2vw 3vw 0vw 3vw; color: #464646;">More links</h3>
+            <h5 style="padding: 0vw 3vw; margin-bottom: 0;" title="Check out my Github profile"><a
+                    href="https://github.com/astroartics">Github profile</a>
+            </h5>
+            <h5 style="padding: 0vw 3vw; margin-top: 0.2vw;" title="View image sources"><a
+                    href="imageSources.html">Image sources</a></h5>
+        </div>
     </footer>
     <script src="recJS.js"></script>
 
