--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -145,7 +145,7 @@
             </div>
         </div>
         <div id="footerLinks">
-            <h3 id="moreLinksTitle" style="padding: 2vw 3vw 0vw 3vw; color: #464646;">More links</h3>
+            <h3 id="moreLinksTitle" style="padding: 2vw 3vw 0vw 3vw; color: #2d2d2d;">More links</h3>
             <h5 style="padding: 0vw 3vw; margin-bottom: 0;" title="Check out my Github profile"><a
                     href="https://github.com/astroartics">Github profile</a>
             </h5>
