--- a/Recruiter/Resume/resume.html
+++ b/Recruiter/Resume/resume.html
@@ -15,7 +15,7 @@
 
     <script>
         function back() {
-            window.location = "../Recruiter/index.html"
+            window.location = "../index.html"
         }
     </script>
     <script src="resumeJS.js"></script>
