--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -118,10 +118,10 @@
         <hr />
         <div id="resume">
             <h3>Resumé</h3>
-            <img id="resumeImg" src="Resume_preview.png">
+            <img id="resumeImg" src="Resume/Resume_preview.png">
             <div id="resumeHover">
                 <h5 style=" margin: 0 auto; background-color: #e2a7a9; color: black; padding: 1vw 0;">View Resumé</h5>
-                <img src="Resume_preview.png">
+                <img src="Resume/Resume_preview.png">
             </div>
         </div>
         <hr />
@@ -136,21 +136,20 @@
 
     <footer>
         <!-- This is the footer. -->
-        <h3 id="footerTitle">You can reach out to me via</h3>
+        <h3 id="footerTitle">You can reach out<br />to me via</h3>
         <div id="footerContainer">
-            <div id="gmail" style="max-width: fit-content;"><img id="gmailImg"
-                    style="max-width: 3vw; border-radius: 0.5vw;" src="gmail.png" title="Send me an e-mail"></div>
-            <div id="linkedIn" style="max-width: fit-content;"><img id="linkedInImg"
-                    style="max-width: 3vw; border-radius: 0.5vw;" src="linkedIn.png" title="View my LinkedIn profile">
+            <div id="gmail" style="max-width: fit-content;"><img id="gmailImg" src="gmail.png"
+                    title="Send me an e-mail"></div>
+            <div id="linkedIn" style="max-width: fit-content;"><img id="linkedInImg" src="linkedIn.png"
+                    title="View my LinkedIn profile">
             </div>
         </div>
         <div id="footerLinks">
-            <h3 id="moreLinksTitle" style="padding: 2vw 3vw 0vw 3vw; color: #2d2d2d;">More links</h3>
-            <h5 style="padding: 0vw 3vw; margin-bottom: 0;" title="Check out my Github profile"><a
-                    href="https://github.com/astroartics">Github profile</a>
+            <h3 id="moreLinksTitle" style="color: #2d2d2d;">More links</h3>
+            <h5 class="footerH5" title="Check out my Github profile"><a href="https://github.com/astroartics">Github
+                    profile</a>
             </h5>
-            <h5 style="padding: 0vw 3vw; margin-top: 0.2vw;" title="View image sources"><a
-                    href="imageSources.html">Image sources</a></h5>
+            <h5 class="footerH5" title="View image sources"><a href="Image_sources/index.html">Image sources</a></h5>
         </div>
     </footer>
     <script src="recJS.js"></script>
