--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -68,7 +68,7 @@
             <!-- <hr style="width: 35vw;" /> -->
             <p id="p3">
                 <big>3)  Website : Leisure ActiviTEAs</big><br /><br />
-                <b style="color : #464646">•</b> Programming language : <i>JavaScript, HTML, CSS, PHP,
+                <b style="color : #464646">•</b> Programming languages : <i>JavaScript, HTML, CSS, PHP,
                     PostgreSQL</i><br />
                 <b style="color : #464646">•</b> Framework used : <i>Bootstrap</i><br />
                 <b style="color : #464646">•</b> Features : <i>Login/Sign up options, Image buttons, Easy to
@@ -81,9 +81,9 @@
 
             <p id="p4">
                 <big>4)  Website : Portfolio Website</big><br /><br />
-                <b style="color : #464646">•</b> Programming language : <i>JavaScript, HTML, CSS</i><br />
+                <b style="color : #464646">•</b> Programming languages : <i>JavaScript, HTML, CSS</i><br />
                 <b style="color : #464646">•</b> Features : <i>Responsive design, Use of CSS animations and transitions,
-                    2D game, Easy to navigate</i><br />
+                    Includes a 2D game, Easy to navigate</i><br />
                 <!-- <b style="color : #464646">•</b> About : <i>We have tried to include the things that are searched the
                     most related to the 5 most common hobby fields namely Art, Music, Sports, Food, Photography under a
                     single domain.</i> -->
@@ -93,7 +93,7 @@
 
             <p id="p5">
                 <big>5)  2D Game : Using HTML Canvas</big><br /><br />
-                <b style="color : #464646">•</b> Programming language : <i>JavaScript, HTML, CSS</i><br />
+                <b style="color : #464646">•</b> Programming languages : <i>JavaScript, HTML, CSS</i><br />
                 <b style="color : #464646">•</b> Features : <i>Responsive design, Virtual keys, Guide, Game restart and
                     quit options</i><br />
                 <!-- <b style="color : #464646">•</b> About : <i>We have tried to include the things that are searched the
@@ -176,7 +176,8 @@
 
         function toGitHub(projectNo) {
             if (projectNo == 1) {
-                window.location = "https://github.com/astroartics/TicTacToe_App";
+                // window.location = "https://github.com/astroartics/TicTacToe_App";
+                window.location = "TicTacToe_project";
             } else if (projectNo == 2) {
                 window.location = "https://github.com/astroartics/Unit-Converter";
             } else if (projectNo == 3) {
