--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -56,8 +56,8 @@
                 <b style="color : #464646">•</b> Features : <i>3x3 and 4x4 grids, Dark mode, High score till date,
                     Customizable
                     player names, Fun facts and tips on loading screen</i><br /><br />
-                &#10147; Go to GitHub repository : <button id="goToGithub" onclick="toGitHub(1)"
-                    title="View code for TicTacToe"><img src="github.png" id="github"></button>
+                <button id="toGitText">&#10147; Go to GitHub repository</button><button id="goToGithub"
+                    onclick="toGitHub(1)" title="View code for TicTacToe"><img src="github.png" id="github"></button>
                 <button id="viewTicTacToe" title="View TicTacToe Project">View</button>
 
 
