--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -111,7 +111,7 @@
                 <button id="view2DGame" onClick="toGitHub(5)" title="View 2D Game">View</button>
             </p>
 
-            <div style="text-align: center;"><button id="showProjects">Show more</button></div>
+            <div style="text-align: center;"><button id="showProjects">Show less</button></div>
         </div>
         <hr />
         <div id="skills">
