--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -155,7 +155,8 @@
         </div>
         <div id="footerLinks">
             <h3 id="moreLinksTitle" style="color: #2d2d2d;">More links</h3>
-            <h5 class="footerH5" title="Check out my Github profile"><a href="https://github.com/astroartics">Github
+            <h5 class="footerH5" title="Check out my Github profile"><a href="https://github.com/astroartics"
+                    target="_blank">Github
                     profile</a>
             </h5>
             <h5 class="footerH5" title="View image sources"><a href="Image_sources/index.html">Image sources</a></h5>
@@ -185,11 +186,11 @@
 
         function toGitHub(projectNo) {
             if (projectNo == 1) {
-                window.location = "https://github.com/astroartics/TicTacToe_App";
+                window.open("https://github.com/astroartics/TicTacToe_App", '_blank');
             } else if (projectNo == 2) {
-                window.location = "https://github.com/astroartics/Unit-Converter";
+                window.open("https://github.com/astroartics/Unit-Converter", '_blank');
             } else if (projectNo == 3) {
-                window.location = "https://github.com/astroartics/Leisure-ActiviTEAs";
+                window.open("https://github.com/astroartics/Leisure-ActiviTEAs", '_blank');
             } else if (projectNo == 4) {
                 window.location = "../index.html";
             } else if (projectNo == 5) {
