--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -49,7 +49,7 @@
         </div>
         <hr />
         <div id="projects">
-            <h3>Projects</h3>
+            <h3 style="text-align: center;">Projects</h3>
             <p id="p1">
                 <big>1)  Android Studio : Tic Tac Toe</big><br /><br />
                 <b style="color : #464646">•</b> Programming language : <i>Java</i><br />
