--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -72,7 +72,18 @@
                 <big>2)  Android Studio : Unit Converter</big><br /><br />
                 <b style="color : #464646">•</b> Programming language : <i>Java</i><br />
                 <b style="color : #464646">•</b> Features : <i>More than 5 units included, Easy to use</i>
-                <button id="viewConverter" onClick="toGitHub(2)" title="View Unit Converter Project">View</button>
+                <!-- <button id="viewConverter" onClick="toGitHub(2)" title="View Unit Converter Project">View</button> -->
+
+                <button class="toGitText">&#10147; Go to GitHub repository</button><button class="goToGithub"
+                    onclick="toGitHub(2)" title="View code for Unit Converter"><img src="github.png"
+                        class="github"></button>
+                <button id="viewUnitConverter" title="View Unit Converter Project">View</button>
+
+
+                <button id="hideUnitConverter" title="Hide Unit Converter Project">Close</button>
+                <video controls autoplay id="p2_video" muted>
+                    <source src="Unit_converter_video.mp4" type="video/mp4">
+                </video>
             </p>
             <!-- <hr style="width: 35vw;" /> -->
             <p id="p3">
@@ -93,7 +104,7 @@
 
 
                 <button id="hideLeisureActiviteas" title="Hide Leisure ActiviTEAs Project">Close</button>
-                <video controls autoplay id="p2_video" muted>
+                <video controls autoplay id="p3_video" muted>
                     <source src="Leisure_activiteas_video.mp4" type="video/mp4">
                 </video>
             </p>
