--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -149,7 +149,7 @@
         <div id="resume">
             <h3>Resumé</h3>
             <img id="resumeImg" src="Resume/Resume_preview.png">
-            <div id="resumeHover">
+            <div id="resumeHover" title="View my resumé">
                 <h5 style=" margin: 0 auto; background-color: #e2a7a9; color: black; padding: 1vw 0;">View Resumé</h5>
                 <img src="Resume/Resume_preview.png">
             </div>
