--- a/Game/Game.html
+++ b/Game/Game.html
@@ -54,8 +54,8 @@
         function backToPortfolio() {
             $(document).ready(function () {
                 setInterval(function () {
-                    // window.location = "../Recruiter/";
-                    history.go(-1);
+                    window.location = "../Recruiter/";
+                    // history.go(-1);
                 }, 300);
                 $('body').addClass('transitionOut');
             });
