--- a/Recruiter/Resume/resume.html
+++ b/Recruiter/Resume/resume.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <iframe src="Resume_for_portfolio.pdf"></iframe>
-        <img src="Resume_phone.jpeg">
+        <img src="Resume_phone.jpg">
         <button onclick="back()">Back</button>
     </div>
 
