--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -43,7 +43,8 @@
                 gain more knowledge regarding anything that comes my way. In a field that requires maximum use of the
                 left brain for logical thinking, I try to do things the creative way. Organizing and keeping things,
                 ranging from real-life objects to HTML elements to the code part, in order, is my forte. An opportunity
-                that will help me enhance my skills and add new ones to my list is what I'm looking for.
+                that will help me enhance my skills and add new ones to my list is what I'm looking for.<br /><br />
+                Education : <a href="#resume">View education</a>
             </p>
             <img src="aboutMeImg.jpg" id="aboutMeImage">
         </div>
