--- a/Student/index.html
+++ b/Student/index.html
@@ -20,8 +20,20 @@
         <div class="hola" id="ex2"><small>!</small></div>
     </h1>
 
-    <div id="letsLearn">
-        <h2>Let's learn and build together...</h2>
+    <div id="container">
+        <div id="letsLearn">
+            <h2>Let's learn and build together...</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos vel
+                veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea doloribus alias!
+            </p>
+        </div>
+
+        <div id="sources">
+            <h2>Let's learn and build together...</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos vel
+                veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea doloribus alias!
+            </p>
+        </div>
     </div>
 
     <script>
