--- a/Student/index.html
+++ b/Student/index.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Home</title>
-
-    <link rel="stylesheet" href="laptopCSS.css">
 </head>
 
 <body>
@@ -48,6 +46,7 @@
             window.location.href = "../";
         }
     </script>
+    <script src="stuJS.js"></script>
 </body>
 
 </html>
