--- a/Student/index.html
+++ b/Student/index.html
@@ -19,18 +19,34 @@
     </h1>
 
     <div id="container">
-        <div id="letsLearn">
-            <h2>Let's learn and build together...</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos vel
-                veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea doloribus alias!
-            </p>
+        <div class="darkBack">
+            <div id="letsLearn">
+                <h2>Let's learn and build together...</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos vel
+                    veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea doloribus
+                    alias!
+                </p>
+            </div>
         </div>
 
-        <div id="sources">
-            <h2>Let's learn and build together...</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos vel
-                veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea doloribus alias!
-            </p>
+        <div class="lightBack">
+            <div id="sources">
+                <h2>Let's learn and build together...</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos vel
+                    veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea doloribus
+                    alias!
+                </p>
+            </div>
+        </div>
+
+        <div class="darkBack">
+            <div id="projects">
+                <h2>Let's learn and build together...</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus illum unde vitae tempora, quos vel
+                    veniam optio! Eum magni, natus explicabo sint quam modi mollitia accusantium impedit ea doloribus
+                    alias!
+                </p>
+            </div>
         </div>
     </div>
 
